<?xml version="1.0"?>
<package>
  <name>bridge_inspection</name>
  <version>0.1.0</version>
  <description>The Bridge_Inspection package</description>
  <maintainer email="seungwon@todo.todo">seungwon</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend><!-- Dependencies needed to compile this package. -->
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>image_geometry</build_depend>


  <run_depend>libpcl-all</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>mav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>image_geometry</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
